$Id: History,v 1.29 2001-08-16 08:17:57 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Aug. 16, 01  H.Kurashige (track-V03-02-00)
- Clean up codes
 
Mar 7, 01  H.Kurashige (track-V03-00-04) 
- Add protection for the zero-momentum case 
  for UpdateStepForAlongStep in ParticleChange  (J.A)

Feb 17, 01  H.Kurashige (track-V03-00-03)
- Add Velocity and Setmethod in G4StepPoint
- Add SetVelocity in G4Step.::InitializeStep
- Modify G4StepPoint::GetVelocity to return correct velocity for optical photon

Feb 17, 01  H.Kurashige (track-V03-00-02)
- Fix G4Track::GetVelocity for Gamma

Feb 12, 01 H.Kurashige (track-V03-00-01)
- Remove thePolarizationChange from G4ParticleChangeForTransport.hh


Feb 07, 01 H.Kurashige (track-V03-00-00)
- Add copy constructor to G4Track 

Oct 19, 00 H.kurashige (track-V02-00-01)
- Bug fixes in copy constructor of G4ParticleChange

Oct 18, 00 H.Kurashige (track-V02-00-00)
- Add "const" to G4DynamicParticle pointer  of returned value of G4Track::GetDynamicParticle 

June 2, 2000 M.Asai  (track-V01-01-02)
- Add G4VUserTrackInformation class and its pointer data member in G4Track
- Add "const" to pointer to G4Step in G4Track (Hisaya) 

June 1 2000 H.Kurashige (track-V01-01-01a)