@@ -1,4 +1,4 @@
-$Id: History,v 1.29 2001-08-16 08:17:57 kurasige Exp $
+$Id: History,v 1.30 2001-09-19 11:05:28 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Sep. 20, 01  H.Kurashige (track-V03-02-01)
+- Modify  G4Mars5GeVMechanism for STL migration of materials
+
 Aug. 16, 01  H.Kurashige (track-V03-02-00)
 - Clean up codes
  
